# UrduPointTagScrapper

./: README.md  dirctory.py  get_content.py  get_elements.py  gzip_to_xml.py  link_cleaner.py  main.py  parallel_requests.py  pyproject.toml  time_extaractors.py
NewsData/2021/02/: 2021-02-28.csv
NewsData/2021/03/: 2021-03-02.csv  2021-03-03.csv  2021-03-04.csv  2021-03-05.csv  2021-03-06.csv  2021-03-07.csv  2021-03-08.csv  2021-03-09.csv  2021-03-11.csv  2021-03-12.csv  2021-03-13.csv  2021-03-14.csv  2021-03-15.csv  2021-03-16.csv  2021-03-17.csv  2021-03-19.csv  2021-03-27.csv  2021-03-29.csv  2021-03-30.csv  2021-03-31.csv
NewsData/2021/04/: 2021-04-01.csv  2021-04-03.csv
NewsData/2021/Mar/: 2021-03-18.csv  2021-03-20.csv  2021-03-21.csv  2021-03-23.csv  2021-03-24.csv  2021-03-25.csv  2021-03-28.csv
NewsDataWithoutTime/2021/02/: 2021-02-27.csv
NewsDataWithoutTime/2021/03/: 2021-03-01.csv  2021-03-22.csv  2021-03-26.csv
NewsDataWithoutTime/2021/04/: 2021-04-02.csv
