[tool.poetry]
name = "urdupointtagscrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
nest-asyncio = "^1.5.1"
lxml = "^4.6.3"
pandas = "^1.2.3"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
